Добавлены миграции для актуальных изменений моделей

--- a/frontend/templates/CourseView.html
+++ b/frontend/templates/CourseView.html
@@ -647,40 +647,7 @@
     </section>
   </main>
 
-  <footer>
-    <div class="container">
-      <div>
-        <img src="logo.png" alt="EduPath Logo" />
-        <p>Прокачай свой мозг :)</p>
-      </div>
-      <div>
-        <h3>Компании</h3>
-        <ul>
-          <li><a href="https://almau.edu.kz/">AlmaU</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3>Контакты</h3>
-        <ul>
-          <li><a href="mailto:dbezrukova482@gmail.com">Написать на почту</a></li>
-          <li>+<a href="https://wa.me/77087449838" target="_blank">Написать в WhatsApp</a></li>
-          <li><a href="https://maps.app.goo.gl/kgowmT1Ww36YGruu8">г. Алматы, ул. Розыбакиева 227</a></li>
-        </ul>
-      </div>
-      <div>
-        <h3>Подписаться на новости</h3>
-        <p>Будьте в курсе новых курсов</p>
-        <form class="flex">
-          <input type="email" placeholder="Ваш email" class="chat-input" style="border-radius: 0.5rem 0 0 0.5rem; margin-right: 0;">
-          <button type="submit" class="send-button" style="border-radius: 0 0.5rem 0.5rem 0;">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
-            </svg>
-          </button>
-        </form>
-      </div>
-    </div>
-  </footer>
+  {% include 'partials/footer.html' %}
 
   <button class="assistant-button">
     <img src="assistant-icon.png" alt="Assistant">
